GCP/HW6/web/static/89bhzpuc_weather.css
/*
* General Stuff (AKA library)
*/


/*1189px width determined by removing all excess pixels on left and right side of ScreenShot1.png*/
body {
    padding: 0px; 
    margin: 0px;
    background-color: #E7E6E8;
}
div, a, span { 
  font-family: 'Segoe UI', sans-serif;
}
a {
  text-decoration: none;
}
div.card-holder {
    text-align: center;
}
div.card {
    background-color: white;
    display: inline-block;
    margin-top: 50px;
    text-align: left;
}
.submit {
    background-color: #4F6EAF;
    border: 0px;
    border-bottom: 4px solid #314A7A;
}
.clear-button {
    background-color: #FFB300;
    border: 0px;
    border-bottom: 4px solid #FF8A00;
}
.button {
    width: 80px;
    padding: 12px;
    display: inline-block;
    font-size: small;
    cursor: pointer;
    color: white;
}
.button:hover {
    opacity: 0.9;
}
/*alignments*/
.left {
    text-align: left;
}
.center {
    text-align: center;
}
.right {
    text-align: right;
}
/*font sizes*/
.xx-large {
    font-size: xx-large;
}
.x-large {
    font-size: x-large;
}
.large {
    font-size: large;
}
.small {
    font-size: small;
}

/*
* Search
*/
#weather-form{
    width: 610px;
    height: 465px;
}
div.header-bar {
    background-image: url("/web/images/banner.jpg");
    background-position: 0% 22%	; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 240%; /* Resize the background image to cover the entire container */
    height: 128px;
}
#header-bar-texts{
    padding-top: 30px;
    padding-left: 40px;
    padding-bottom: 25px;
}
#weather-search{
    font-size: 140%;
    font-weight: 500;
    margin-bottom: 15px;
}
#fill-out-form{
    font-size: 100%;
    font-weight: 400;
}
#search-form {
    /* the following is to take full advantage of the width, minux the padding*/
    width: auto; 
    left: 0px; 
    right: 0px; 
    max-width: 100%;    
    
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 25px;
    padding-bottom: 25px;
}
#search-form input[type="text"], select{
    top: 0px;
    padding-top: 0px;
    margin-top: 0px;
    height: 25px;
    margin-bottom: 10px;
}
#street {
    width: 100%;
    box-sizing: border-box;
}
#city{
    box-sizing: border-box;
    width: 100%;
}
#state{
    box-sizing: border-box;
    width: 100%;
}
#address-table {
    width: 100%;
    
}
#address-table tr, #address-table td, #address-table th {
    padding-bottom: 4px;
}
.width-auto-2 {
    width: 50%;
    box-sizing: border-box;
}
#city-cell{
    padding-right: 30px;
}
div#auto-detect {
    margin-bottom: 35px;
    font-size: 120%;
}
#horiz-rule{
    width: 100%;
    box-sizing: border-box;
    background-color:RoyalBlue;
}
    
label {
    color: RoyalBlue;
    font-size: 90%;
    font-weight: bold;
}
.required {
    color: red;
}

/*
* No Records Found Card
*/
#no-records-card{
    width: 610px;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-top: 20px; /*over ride card margin top*/
}

/*
* Current Weather
*/
#current-weather-card {
    width: 847px;
    height: 472px;
    color: #8A8788;
}
#current-weather th, #current-weather td {
    padding: 8px;    
}
#location {
    font-size: 165%;
    margin-bottom: 5px;
    margin-left: 20px;
    margin-top: 15px;
}
#current-details{
    width: 100%;
    box-sizing: border-box;    
    text-align: center;
}
tr#current-details-icons img {
    width: 40px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}
img#weather-code-icon{
    width: 180px;
}
#weather-code-text{
    font-size: 110%;
}
#current-weather-code-stuff{
    padding-left: 25px;
}

#current-summary {
    width: 100%;
    margin-bottom: 20px;
}
#current-temp{
    font-size: 180px;
    text-align: center;
    font-weight: 300;
    line-height: 80%;
    padding-right: 45px;
    margin-top: 10px;
}
#current-temp-th{
    vertical-align: top;
}
tr#current-big-picture-row {
    height: 50px;
}
#current-weather table, #current-weather tr, #current-weather th, #current-weather td {
  border: 0px;
}


/*
* Forecast
*/

#x-day-forecast-card {
    width: 1319px;
}	
#x-day-forecast {
    color: #404040;
    border-spacing: 0;
    font-weight: 500;
    text-align: center;
    width: 100%;
    height: 100%;
}
span.weather-status-span{
    display: inline-block;
    vertical-align: middle;
}

#x-day-forecast th {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
}

#x-day-forecast th, #x-day-forecast td{
    border-bottom: 7px solid lightgray;
}
img.forecast-weather-status-icon {
    width: 60px;
    
}
.forecast-table-header{
    background-color: #5A68AC;
    height: 50px;
}
.forecast-table-row{
    height: 90px;
    cursor: pointer;
}
.forecast-table-row span{
    /*
    line-height: 90%;
    */
    vertical-align: middle;
    margin-left: 10px;
}

/*
* Daily Weather
*/
#daily-weather-details-card{
    width: 600px;
    height: 492px;
    background-image: linear-gradient(white, #234469);
    padding: 20px;
    box-sizing: border-box;
    
}
div.hover-shadow:hover{
    /* in order: x offset, y offset, blur size, spread size, color */
    /* blur size and spread size are optional (they default to 0) */
    box-shadow: 0px 5px 10px 0px gray
}
#daily-day{
    font-size: 28px;
    color: #234469;
    margin-bottom: 20px;
}
#daily-weather-code-text {
    font-size: 28px;
    color: #234469;
    margin-bottom: 20px;
}
#daily-hi-low-temp {
    font-size: 35px;
    color: #234469;
}
#daily-weather-code-icon {
    width: 180px;
    margin-left: 88px;
    margin-top: 10px;
}
#daily-weather-details-table{
    color: white;
    margin-left: 270px;
    margin-top: 40px;
}
.daily-details-label{
    text-align: right;
    font-size: 20px;
    font-weight: 500;
}
.daily-details-value{
    text-align: left;
    font-size: 23px;
    font-weight: 500;
    margin-top: 7px;
    margin-bottom: 7px;
}

.card-header{
    font-size: 45px;
    margin-top: 45px;
    margin-bottom: 25px;    
}


/*
* Charts
*/

/*
div.weather-chart {
    margin-top: 0px; /*override the normal margin for cards, to allow the button*/
    /*
    display: block;
}
*/
.arrow-button{
    width: 44px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-bottom: 8px;
}

#days-chart, #hours-chart{
    width:1000px; 
    height:400px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 50px;
}

